--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,9 @@
         <activity
             android:name=".AllTeamActivity"
             android:label="@string/app_name"/>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+            android:windowSoftInputMode="adjustPan"
+        </activity>
 
         <service android:name=".AccountService">
             <intent-filter>
