--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:19.+'
     compile files('libs/Android_Location_V1.3.0.jar')
+    compile files('libs/android-support-v4.jar')
 }
