--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="31fc7831156d07f6d9b3349692bb4724" />
+            android:value="735eb0f14a5ab8fe23a646435e68f798" />
 
         <activity
             android:name=".WelcomeActivity"
@@ -66,7 +66,7 @@
 
         <activity android:name=".NearbyActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SettingTabActivity" />
         <activity android:name=".ComplainActivity" />
         <activity android:name=".MessageActivity" />
         <activity android:name=".RegisterActivity" />
