--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
         <activity android:name=".TeamFindActivity" />
         <activity android:name=".TeamGatherActivity" />
         <activity android:name=".TeamHistoryActivity" />
-
+        <activity android:name=".PhoneListview"/>
 
 
 
