本地日程完成第一步

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets{
-        main{
+    sourceSets {
+        main {
             jniLibs.srcDirs = ['libs']
         }
     }
@@ -27,12 +27,17 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
 
-repositories {
-    mavenCentral()
-    flatDir {
-        dirs 'libs'
+    repositories {
+        mavenCentral()
+        flatDir {
+            dirs 'libs'
+        }
     }
-}
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 
 }
 dependencies {
@@ -48,4 +53,5 @@ dependencies {
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
     compile files('libs/baidumapapi_v3_2_0.jar')
     compile files('libs/locSDK_5.01.jar')
+    compile 'org.apache.commons:commons-lang3:3.3.2'
 }
